--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,16 @@
 language: go
-go_import_path: github.com/myitcv/goget
+env:
+  - GO111MODULE=on
+go_import_path: github.com/myitcv/gobin
 go:
   - "1.11.x"
-script: go test ./...
+before_script:
+  - git config --global core.excludesfile ~/.gitignore_global
+  - echo ".gobincache" >> ~/.gitignore_global
+install: "echo no install step required"
+script:
+  - go test ./...
+  - go run github.com/myitcv/gobin -m -r myitcv.io/cmd/mdreplace -long -online -w README.md
+  - go mod tidy
+  - go list all > /dev/null # https://github.com/golang/go/issues/27868#issuecomment-431413621
+  - bash -c "test -z \"$(git status --porcelain)\" || (git status; git diff; false)"
