--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,36 @@
 language: go
+
+matrix:
+  include:
+    - os: linux
+      go: "1.11.x"
+      env: CHECK_GOFMT=1
+    - os: osx
+      go: "1.11.x"
+    - os: windows
+      go: "1.11.x"
+
 env:
-  - GO111MODULE=on
+  global:
+    - GO111MODULE=on
+
 go_import_path: github.com/myitcv/gobin
-go:
-  - "1.11.x"
+
+# Add this before_install until we have a definitive resolution on
+# https://travis-ci.community/t/files-in-checkout-have-eol-changed-from-lf-to-crlf/349/2
+before_install:
+  - cd ../..
+  - mv $TRAVIS_REPO_SLUG _old
+  - git config --global core.autocrlf false
+  - git clone --depth=50 _old $TRAVIS_REPO_SLUG
+  - cd $TRAVIS_REPO_SLUG
+
+install: "echo no install step required"
+
 before_script:
   - git config --global core.excludesfile ~/.gitignore_global
   - echo ".gobincache" >> ~/.gitignore_global
-install: "echo no install step required"
+
 script:
   - go test ./...
 
@@ -19,5 +42,12 @@ script:
 
     # https://github.com/golang/go/issues/27868#issuecomment-431413621
   - go list all > /dev/null
-  - go run github.com/myitcv/gobin -m -run myitcv.io/cmd/mdreplace -long -online -w README.md
+
+    # TODO re-enable once we can sort secrets on Windows; then we can work
+    # out what Docker strategy we need/want
+    #
+    # - go run github.com/myitcv/gobin -m -run myitcv.io/cmd/mdreplace -long -online -w README.md
+    # - gobin -m -run myitcv.io/cmd/mdreplace -w README.md
+
+  - if [[ -n $CHECK_GOFMT ]]; then diff <(echo -n) <(gofmt -d .); fi
   - test -z "$(git status --porcelain)" || (git status; git diff; false)
