ci: add Go1.12beta to the build matrix
As part of that, fix test where behaviour of go command has changed
between 1.11 and 1.12 series.

This also requires that we upgrade our dependency on
github.com/rogpeppe/go-internal to take advantage of go version
conditions.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,19 @@
 language: go
 
+go:
+  - "1.11.x"
+  - "1.12beta2"
+
+os:
+  - linux
+  - osx
+  - windows
+
 matrix:
   include:
     - os: linux
       go: "1.11.x"
       env: CHECK_GOFMT=1
-    - os: osx
-      go: "1.11.x"
-    - os: windows
-      go: "1.11.x"
 
 env:
   global:
