main: optimise "runtime" steps
gobin maintains binaries in its own cache. The key for a cache entry is
a function of main package path, version and build tags. Assuming nobody
tampers with the build cache (making it readonly is the subject of #5),
then we need only install to the cache entry if a file does not already
exist.

Also, optimise go list calls by using -find; we don't care for the
dependencies in these steps.

No change in tests because there should be no change in behaviour.

With some incredibly unscientific timing tests on my machine, this
reduces the time taken for "gobin -run github.com/myitcv/gobin -help"
from 0.636s to 0.246s. "gobin -help" times at 0.070s which means ~0.176s
of gobin "overhead".

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,13 @@ cache:
   - $GOPATH/pkg/mod/cache
 
 go:
-  - "1.11.12"
-  - "1.12.7"
+  - "1.11.13"
+  - "1.12.9"
   - "1.13beta1"
+
+branches:
+  only:
+    - master
 
 os:
   - linux
